[project]
name = "davidkhala.ibm.watson"
version = "0.0.0"
description = "Connect to revamped IBM"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pydantic", "davidkhala-utils"
]
[project.optional-dependencies]
orchestrate = ["ibm-watsonx-orchestrate"]


[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest"
]
